--- a/.github/workflows/testingProject.yml
+++ b/.github/workflows/testingProject.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore app/app.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build app/exam/exam.csproj
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test app/TestProject/TestProject.csproj
