--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
+#результаты сборки + бинарные файлы
 [Bb]in/
 [Oo]bj/
+[Dd]ebug/
+[Rr]elease/
 x64/
 x86/
-.vs/
+
+#файлы логов
 [Ll]og/
 [Ll]ogs/
+
+#файлы NuGet пакетов
+[Pp]ackages/
+
+#файлы пользователя, кэша
+.vs/
+*.user
+*.suo
+
